# DNS

./: .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  docker-compose.yaml
.github/workflows/: api-ci.yaml  api-prod-cd.yaml  backend-cd.yaml  backend-ci.yaml  backend.yaml  cd-dev.yaml  cd-prod-api.yaml  cd-prod-dns.yaml  cd-prod-frontend.yaml  ci-dns.yaml  ci-frontend.yaml  dns-ci.yaml  frontend-ci.yaml
api/: Dockerfile
api/app/tests/: conftest.py  test_root.py
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/tests/: conftest.py
backend/tests/: conftest.py  test_root.py
conf/: ecs-task-definition.json
conf/infrastructure/: code_deploy.tf  ecs.tf  nat_gateways.tf  roles.tf  security_groups.tf  subnets.tf
dns/: Dockerfile  go.mod  go.work  main.go
frontend/: Dockerfile  karma.conf.js  package-lock.json  package.json
terraform/: ecr.tf  eip.tf  elb.tf  internet_gateways.tf  vpc.tf
tf/: ec2.tf  ecr.tf  ecs.tf  eip.tf  elb.tf  internet_gateways.tf  nat_gateways.tf  roles.tf  route_tables.tf  security_groups.tf  subnets.tf  vpc.tf
