[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sebastian Ozimkowski <sebastianozimkowski@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.76.0"
httpx = "^0.22.0"
requests = "^2.27.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
